# MLOps

./: .jscpd.json  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  linter.yaml  unit_test.yml
src/: flaskapp.py  model.py
src/templates/: index.html  result.html  results.html
test/: test_model.py
