[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-prediction"
version = "0.1.0"
description = "Loan Prediction Model"
authors = [{name = "David McDaid", email = "davidmcdaid@live.com"}]
requires-python = ">=3.8"
dependencies = [
    "joblib>=1.1.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "pytest>=7.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
